# jquants-ml-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
jquants_ml/: __init__.py  ml.py
tests/: 6273.d.csv  6273.m.joblib  6273.p.csv  7203.csv  7203.d.csv  7203.joblib  7203.p.csv  test_ml.py
